Upgrade Quarkus to 3.13.0.CR1